<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#AECBD8"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/textButton_Clear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#B1AAAA"
        android:text="@string/text_button_clear"
        android:textAllCaps="false"
        android:textColor="#010209"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_Split" />

    <TextView
        android:id="@+id/textView_billTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/textView_billTotal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_billAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#64AFEC"
        android:ems="10"
        android:hint="@string/editText_bill_hint"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:text="@string/editText_billAmount"
        app:layout_constraintBottom_toBottomOf="@+id/textView_billTotal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView_billTotal"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/textView_tip"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_billTotal" />

    <RadioGroup
        android:id="@+id/radioGroup_tip"
        android:layout_width="338dp"
        android:layout_height="27dp"
        android:layout_marginEnd="8dp"
        android:checkedButton="@id/radioButton5"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/editText_billAmount">

        <RadioButton
            android:id="@+id/radioButton5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radiobutton_tenPer"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/radioButton6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radiobutton_fifteenPer" />

        <RadioButton
            android:id="@+id/radioButton7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radiobutton_eighteenPer"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/radioButton8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radiobutton_custom"
            tools:ignore="TouchTargetSizeCheck" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView_Custom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/textView_Custom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup_tip" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="296dp"
        android:layout_height="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView_Custom"
        app:layout_constraintStart_toEndOf="@+id/textView_Custom"
        app:layout_constraintTop_toTopOf="@+id/textView_Custom" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="40%"
        app:layout_constraintBottom_toBottomOf="@+id/seekBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/seekBar"
        app:layout_constraintTop_toTopOf="@+id/seekBar" />

    <TextView
        android:id="@+id/textView_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/textView_tip_cal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_Custom" />

    <TextView
        android:id="@+id/textView_tip_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView_tip_val"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toEndOf="@+id/textView_tip"
        app:layout_constraintTop_toTopOf="@+id/textView_tip" />

    <TextView
        android:id="@+id/textView_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/textView_total"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_tip" />

    <TextView
        android:id="@+id/textView_total_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView_tip_val"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toEndOf="@+id/textView_total"
        app:layout_constraintTop_toTopOf="@+id/textView_total" />

    <TextView
        android:id="@+id/textView_splitBy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/textView_splitBy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_total" />

    <RadioGroup
        android:id="@+id/radio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView_splitBy"
        app:layout_constraintTop_toBottomOf="@+id/textView_total">

        <RadioButton
            android:id="@+id/radioButton_one"
            android:layout_width="79dp"
            android:layout_height="wrap_content"
            android:text="@string/RadioButton_One" />

        <RadioButton
            android:id="@+id/radioButton_two"
            android:layout_width="83dp"
            android:layout_height="wrap_content"
            android:text="@string/RadioButton_two" />

        <RadioButton
            android:id="@+id/radioButton_three"
            android:layout_width="82dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radioButton_three" />

        <RadioButton
            android:id="@+id/radioButton_four"
            android:layout_width="73dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/RadioButton_four" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView_Split"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/textView_Split"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_splitBy" />

    <TextView
        android:id="@+id/textView_split_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView_tip_val"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.039"
        app:layout_constraintStart_toEndOf="@+id/textView_Split"
        app:layout_constraintTop_toTopOf="@+id/textView_Split" />

</androidx.constraintlayout.widget.ConstraintLayout>